Bug 1013552 - [GTK3] GetThebesSurface() provides xlib surface when cairo target is not available. r=karlt